syntax = "proto3";
package admin_menu;
option go_package = "admin/proto/admin_menu;admin_menu";

message menuItem{
  string key = 1; // 菜单唯一键
  string path = 2; // 菜单路由
  string name = 3; // 菜单名称
  string icon = 4; // 菜单图标
  string component = 5;
  string authority = 6;
  repeated routeItem routes = 7;
}

message routeItem {
  string key = 1;
  string path = 2;
  string name = 3;
  string icon = 4;
  string component = 5;
}